[project]
name = "crk-payment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "construct>=2.10.70",
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "construct-typing>=0.7.0",
]
